@@ -1,3 +1,12 @@
+2007-02-20  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/{handler.c|isakmp_var.h}: updated delete_spd() calls.
+	* src/racoon/isakmp.c: Only delete a generated SPD if it's
+	  creation date matches the creation date of the SA we are
+	  currently deleting.
+	* src/racoon/{pfkey.c|isakmp_inf.c}: fills creation date of
+	  generated SPDs.
+	* src/racoon/policy.h: added 'created' var.
+
 2007-02-19  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/racoon/isakmp.c: Removed a debug printf....
 
